🎨 feat: adicionar certificacao scrum

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ assets/images/leiene-about.jpg
 assets/images/leiene-photo.jpg
 assets/images/logo.png
 assets/pdf/CV_LEIENE_NEVES.pdf
+assets/pdf/ScrumFundamentalsCertified-LeieneNeves-1074591.pdf
